# NiftiMesh

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/: render_comparison.py
examples/: README.md  convert.py
niftimesh/: __init__.py  __main__.py  _version.py  builder.py  cli.py  convert.py  naive.py  presets.py
tests/: test_niftimesh.py
